--- a/Lesson_3/homework-3.html
+++ b/Lesson_3/homework-3.html
@@ -2,15 +2,17 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Домашнее 3</title>
+  <title>Выбор пиццы</title>
 </head>
 <body>
   <header></header>  
   <main>
     <form action="http://courses.krajn.by/lesson/3/pizza.php" method="POST">
-      <input type="text" name="firstname" placeholder="Введи имя"/>
-      <input type="text" name="lastname" placeholder="Введи фамилию"/>
-      <input type="text" name="address" placeholder="Введи адрес доставки"/>
+      <div>
+        <input type="text" name="firstname" placeholder="Введи имя"/>
+        <input type="text" name="lastname" placeholder="Введи фамилию"/>
+        <input type="text" name="address" placeholder="Введи адрес доставки"/>
+      </div>
       <p></p>
       <div>
         <select name="pizza">
