edits to homework-1

--- a/Lesson_2/homework-1.html
+++ b/Lesson_2/homework-1.html
@@ -36,7 +36,7 @@
             </section>
             <section>
                 <div><img src="Files/scale_1200.jfif"  alt="кот-программист"></div>
-                <div></div><img src="Files/1506971885194922180.jpg"  alt="пёсель-программист"></div>
+                <div><img src="Files/1506971885194922180.jpg"  alt="пёсель-программист"></div>
                 <div><audio src="Files/Broken Ears - Ghosts.mp3" controls></audio></div>
             </section>
         </main>
