--- a/Lesson_2/homewok-2.html
+++ b/Lesson_2/homewok-2.html
@@ -171,6 +171,8 @@
                             <td><b>Валюта</b></td>
                             <td><b>Религия</b></td>
                         </tr>
+                    </thead>
+                    <tbody>
                         <tr>
                             <td><a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BE%D0%B5%D0%B4%D0%B8%D0%BD%D1%91%D0%BD%D0%BD%D1%8B%D0%B5_%D0%A8%D1%82%D0%B0%D1%82%D1%8B_%D0%90%D0%BC%D0%B5%D1%80%D0%B8%D0%BA%D0%B8">США</a></td>
                             <td>Английский</td>
@@ -209,8 +211,7 @@
                                 </ul>
                             </td>
                         </tr>
-                    </thead>
-                    <tbody></tbody>
+                    </tbody>
                     <tfoot></tfoot>
                 </table>
             </section>
