edits to homework-3

--- a/Lesson_3/homework-3.html
+++ b/Lesson_3/homework-3.html
@@ -24,26 +24,26 @@
         </select>
       </div>
       <p></p>
+      <div>Выбери размер пиццы:</div>
       <div>
-        Выбери размер пиццы:<br>
-        <input type="radio" name="size" value="10"/>10 см
-        <input type="radio" name="size" value="20"/>20 см
-        <input type="radio" name="size" value="30"/>30 см
+       <input type="radio" name="size" value="10"/>10 см
+       <input type="radio" name="size" value="20"/>20 см
+       <input type="radio" name="size" value="30"/>30 см
       </div>
       <p></p>
+      <div>Выбери способ доставки:</div>
       <div>
-        Выбери способ доставки:<br>
         <input type="radio" name="delivery" value="delivery"/>Доставка
         <input type="radio" name="delivery" value="pickup"/>Самовывоз
       </div>
       <p></p>
+      <div>Добавить соус?</div>
       <div>
-        Добавить соус?<br>
         <input type="checkbox" name="sauce"/>Да
       </div>
       <p></p>
+      <div>Что-нибудь ещё?</div>
       <div>
-        Что-нибудь ещё?<br>
         <textarea name="comments" cols="30" rows="5"></textarea>
       </div>
       <button>Отправить</button>
