--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="access/css/style.css">
   <!-- подключение глобальных стилей -->
   <style>
     div {
