--- a/Lesson_4/homework_4.html
+++ b/Lesson_4/homework_4.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>homework_4</title>
-  <link rel="stylesheet" href="access/css/reset.css">
-  <link rel="stylesheet" href="access/css/style-4.css">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style-4.css">
 </head>
 <body>
   <div class="sheet">
