--- a/Lesson_4/inedx-2.html
+++ b/Lesson_4/inedx-2.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
 <title>Document</title>
-<link rel="stylesheet" href="access/css/reset.css">
+<link rel="stylesheet" href="assets/css/reset.css">
 <!-- сначала указываем ресет, потому что он первым прочитается, а потом уже мы сами пишем необходимые нам стили -->
-<link rel="stylesheet" href="access/css/style-2.css">
+<link rel="stylesheet" href="assets/css/style-2.css">
 </head>
 <body>
   <div>
