--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,7 @@
       <img class="logo__company" src="/assets/img/logo.svg" alt="">
     </div>
     <div class="header__wrapper">
-      <nav class="menu">
+      <nav class="menu menu--open">
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link" href="#">Главная</a>
@@ -37,9 +37,38 @@
         </ul>
       </nav>
       <button class="btn btn--call">Зайти в кабинет</button>
+      <div class="burger-box">&#9776;</div>
     </div>
   </header>
-  <main></main>
+  <main class="main">
+    <section class="section first-screen">
+      <div class="first-screen__wrapper">
+        <h1 class="first-screen__title">
+            <p>Первый курс</p>
+            <p>по компьютерной сборке</p>
+        </h1>
+        <div class="timer">
+          <div class="timer__item">
+            <p class="timer__count">18</p>
+            <p class="timer__desc">Дней</p>
+          </div> 
+          <div class="timer__item">
+            <p class="timer__count">18</p>
+            <p class="timer__desc">Часов</p>
+          </div> 
+          <div class="timer__item">
+            <p class="timer__count">18</p>
+            <p class="timer__desc">Минут</p>
+          </div> 
+          <div class="timer__item">
+            <p class="timer__count">18</p>
+            <p class="timer__desc">Секунд</p>
+          </div>          
+        </div>
+      </div>
+    </section>
+  </main>
   <footer></footer>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
