--- a/project/index.html
+++ b/project/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/assets/css/reset.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header class="header">
     <div class="logo">
-      <img class="logo__company" src="/assets/img/logo.svg" alt="">
+      <img class="logo__company" src="assets/img/logo.svg" alt="">
     </div>
     <div class="header__wrapper">
       <nav class="menu menu--open">
@@ -67,8 +67,38 @@
         </div>
       </div>
     </section>
+    <section class="section study-count">
+      <div class="study-count__subscribe">
+        <button class="btn btn--subscribe">Заказать курс</button>
+      </div>
+      <table class="table-count">
+        <tr>
+          <td class="table-count__name">Учеников всего:</td>
+          <td class="table-count__result">200</td>
+        </tr>
+        <tr>
+          <td class="table-count__name">Успешно закончили курс:</td>
+          <td  class="table-count__result">190</td>
+        </tr>
+      </table>
+      <div class="progress-earned">
+        <table class="table-count">
+          <tr>
+            <td class="table-count__name">Заработано учениками:</td>
+            <td class="table-count__result">400 000₽</td>
+          </tr>
+        </table>
+        <div class="progress-earned__bar">
+          <div class="progress-earned__percent"></div>
+        </div>
+        <div class="progress-earned__mark">
+          <p class="progress-earned__number">0</p>
+          <p class="progress-earned__number">1 000 000₽</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
-  <script src="/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
