--- a/project/index.html
+++ b/project/index.html
@@ -72,18 +72,18 @@
         <button class="btn btn--subscribe">Заказать курс</button>
       </div>
       <table class="table-count">
-        <tr>
-          <td class="table-count__name">Учеников всего:</td>
-          <td class="table-count__result">200</td>
+        <tr class="table-count__row">
+          <td class="table-count__column table-count__name">Учеников всего:</td>
+          <td class="table-count__column table-count__result">200</td>
         </tr>
-        <tr>
-          <td class="table-count__name">Успешно закончили курс:</td>
-          <td  class="table-count__result">190</td>
+        <tr class="table-count__row">
+          <td class="table-count__column table-count__name">Успешно закончили курс:</td>
+          <td  class="table-count__column table-count__result">190</td>
         </tr>
       </table>
       <div class="progress-earned">
         <table class="table-count">
-          <tr>
+          <tr class="table-count__column">
             <td class="table-count__name">Заработано учениками:</td>
             <td class="table-count__result">400 000₽</td>
           </tr>
@@ -94,6 +94,52 @@
         <div class="progress-earned__mark">
           <p class="progress-earned__number">0</p>
           <p class="progress-earned__number">1 000 000₽</p>
+        </div>
+      </div>
+    </section>
+    <section class="section about">
+      <div class="about__wrapper"> 
+        <img class="about__computer" src="assets/img/about__img.svg" alt="">
+      </div>
+      <div class="about__text">
+        <h2 class="title about__title">Чем мы занимаемся?</h2>
+        <p class="description about__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et neque, adipiscing sapien sem senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis arcu malesuada arcu interdum placerat nisi, lobortis.</p>
+      </div>
+    </section>
+    <section class="section fast-start">
+      <div class="icon">
+        <img class="icon__circle" src="assets/img/icons/icon-fast.svg" alt="">
+        <h2 class="title fast-start__title">Быстрый старт</h2>
+      </div>
+      <p class="description description--opacity-5 fast-start__subtitle">Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер</p>
+      <div class="scale">
+        <div class="scale__item">
+          <p class="scale__percent">100%</p>
+          <div class="scale__wrapper">
+            <div class="scale__progress scale__progress-full"></div>
+          </div>
+          <p class="scale__description description description--opacity-5 description--small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+        </div>
+        <div class="scale__item">
+          <p class="scale__percent">75%</p>
+          <div class="scale__wrapper">
+            <div class="scale__progress scale__progress-quarter scale__progress--reverse"></div>
+          </div>
+          <p class="scale__description description description--opacity-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+        </div>
+        <div class="scale__item">
+          <p class="scale__percent">50%</p>
+          <div class="scale__wrapper">
+            <div class="scale__progress scale__progress-half"></div>
+          </div>
+          <p class="scale__description description description--opacity-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+        </div>
+        <div class="scale__item">
+          <p class="scale__percent">Итог</p>
+          <div class="scale__wrapper">
+            <div class="scale__progress scale__progress-total scale__progress--reverse"></div>
+          </div>
+          <p class="scale__description description description--opacity-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
         </div>
       </div>
     </section>
