--- a/project/index.html
+++ b/project/index.html
@@ -143,6 +143,26 @@
         </div>
       </div>
     </section>
+    <section class="section advantages">
+      <h2 class="title title--center">Получите профессию прямо сейчас</h2>
+      <div class="advantages__wrapper">
+        <div class="advantages__item">
+          <img class="advantages__image" src="assets/img/icons/advantages-computer.svg" alt="">
+          <p class="advantages__title">Только практические навыки в работе</p>
+          <p class="advantages__description description description--opacity-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+        </div>
+        <div class="advantages__item">
+          <img class="advantages__image" src="assets/img/icons/advantages-usb.svg" alt="">
+          <p class="advantages__title">Работа на самом современном оборудовании</p>
+          <p class="advantages__description description description--opacity-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+        </div>
+        <div class="advantages__item">
+          <img class="advantages__image" src="assets/img/icons/advantages-cabel.svg" alt="">
+          <p class="advantages__title">Сертификация по окончании обучения</p>
+          <p class="advantages__description description description--opacity-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
   <script src="assets/js/main.js"></script>
