--- a/project/index.html
+++ b/project/index.html
@@ -163,6 +163,69 @@
         </div>
       </div>
     </section>
+    <section class="section partners">
+      <div class="icon">
+        <img class="icon__circle" src="assets/img/icons/icon-partners.svg" alt="">
+        <h2 class="title">Партнеры - топовые бренды</h2>
+      </div>
+      <div class="partners__wrapper">
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+        <div class="partners__item">
+          <img src="assets/img/partners/partner-1.svg" alt="" class="parnters__partner">
+        </div>
+      </div>
+    </section>
+    <section class="section programm">
+      <div class="icon icon--vertical">
+        <img class="icon__circle icon__circle--vertical" src="assets/img/icons/icon-programm.svg" alt="">
+        <h2 class="title">Программа обучения</h2>
+      </div>
+      <p class="programm__subtitle description description--opacity-5">
+        <span>Больше 90% учеников прошли полный курс и смогли</span>
+        <span>собрать свой первый компьютер</span>
+      </p>
+      <div class="programm__wrapper">
+        <div class="programm__left">
+          <div class="week">
+            <p class="week__title description description--small description--opacity-5">Неделя №1</p>
+            <p class="week__description">Красивая часть курса,
+              которая помогает в успехе</p>
+          </div>
+
+        </div>
+        <div class="programm__tree"></div>
+        <div class="programm__right">
+          <div class="week">
+            <p class="week__title description description--small description--opacity-5">Неделя №2</p>
+            <p class="week__description">Красивая часть курса,
+              которая помогает в успехе</p>
+          </div>
+        </div>
+      </div>
+      
+    
+
+    </section>
   </main>
   <footer></footer>
   <script src="assets/js/main.js"></script>
